SERVER-92640 $unionWith stage for explain does not use the router role API (#25097)

GitOrigin-RevId: 9be6a330e2d366715a8047af2a9ec9303288d2a5